# libaio

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  libAio.swift  libaio.cpp  libaio.h
.github/workflows/: ci.yml  codeql.yml
